--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 regex = "1"
-tokio = { version = "1.42.0", features = ["io-util", "macros", "net"] }
+tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
 
 [dev-dependencies]
 tokio-test = "0.4.4"
