--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 regex = "1"
+reqwest = "0.12.9"
 tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
 
 [dev-dependencies]
