--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 regex = "1"
 reqwest = "0.12.9"
+sha1_smol = "1.0.1"
 tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
 
 [dev-dependencies]
