--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 regex = "1"
 reqwest = "0.12.9"
 sha1_smol = "1.0.1"
-tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
+console-subscriber = "0.4.1"
+tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync", "tracing"] }
 
 [dev-dependencies]
 mockito = "1.6.1"
