--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ regex = "1"
 reqwest = "0.12.9"
 sha1_smol = "1.0.1"
 tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
+url = "2.5.4"
 
 [dev-dependencies]
 mockito = "1.6.1"
