--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.10.0"
+clap = { version = "4.5.29", features = ["derive"] }
 nom = "8"
 regex = "1"
 reqwest = "0.12.9"
