--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ regex = "1"
 reqwest = "0.12.9"
 sha1_smol = "1.0.1"
 tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
 url = "2.5.4"
 
 [dev-dependencies]
