--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ reqwest = "0.12.9"
 sha1_smol = "1.0.1"
 tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "sync"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 url = "2.5.4"
 
 [dev-dependencies]
